[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "medextract"
version = "0.1.0"
description = "Extract readings from medical device images using a local LLM (Ollama + MedGemma)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["medical", "blood-pressure", "ocr", "llm", "ollama"]
dependencies = [
    "ollama",
    "pillow",
    "pandas",
]

[project.scripts]
medextract = "medextract.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["medextract*"]
